--- a/app/src/App.css
+++ b/app/src/App.css
@@ -127,3 +127,12 @@
   font-size: 1rem;
   cursor: pointer;
 }
+
+.modal-verify p {
+  padding: 0;
+  margin: 0;
+}
+
+.passcode-modal button {
+  margin: 0;
+}
