--- a/app/src/App.css
+++ b/app/src/App.css
@@ -92,7 +92,6 @@ body {
   font-weight: bold;
 }
 
-/* Images within List Items */
 #emergency-list ul li img {
   max-width: 100%;
   height: auto;
@@ -100,7 +99,6 @@ body {
   border-radius: 5px;
 }
 
-/* Highlight List on Hover */
 #emergency-list ul li:hover {
   border-color: #aaa;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.15);
@@ -108,20 +106,32 @@ body {
   transition: all 0.2s ease-in-out;
 }
 
+/* MODAL STUFF FROM HERE AND BELOW */
 .modal {
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   background: white;
-  width: 500px; /* Set a fixed width */
-  height: 850px; /* Set a fixed height */
-  padding: 20px;
   border: 1px solid #ccc;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   z-index: 1000;
-  overflow: hidden; /* Prevent content from expanding the modal */
-  border-radius: 8px; /* Optional: Rounded corners */
+  border-radius: 8px;
+  overflow: hidden; /* prevent overflow */
+}
+
+.create-report-modal {
+  width: 500px;
+  height: 850px;
+  padding: 20px;
+}
+
+.passcode-modal {
+  width: auto;
+  max-width: 90%;
+  min-width: 300px;
+  height: auto;
+  padding: 20px;
 }
 
 .modal-content {
@@ -129,7 +139,7 @@ body {
   flex-direction: column;
   gap: 15px;
   max-height: 100%;
-  overflow-y: auto; /* Enable scrolling within the modal */
+  overflow-y: auto; /* for scrolling content */
 }
 
 .modal-content label {
