--- a/app/src/App.css
+++ b/app/src/App.css
@@ -106,6 +106,11 @@ body {
   transition: all 0.2s ease-in-out;
 }
 
+.button-delete {
+  background-color: indianred;
+  margin-right: 10px;
+}
+
 /* MODAL STUFF FROM HERE AND BELOW */
 .modal {
   position: fixed;
